# BobTheCryptoBot

./: .gitignore  Crypto.database  Crypto.database-journal  Dockerfile  README.md  algorytm_test.py  bot_bob.py  pyproject.toml  scraper.py
tests/: test_bot_bob.py  test_main.py
