[tool.poetry]
name = "Bob_Crypto_Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.1.0"
python-dotenv = "^0.21.0"
pycoingecko = "^3.1.0"
sqlitedict = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
